kubernetes/hello/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  labels:
    app: hello
spec:
  type: ClusterIP
  selector:
    app: hello
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
